# AgroDashRD

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  render.yaml  requirements.txt  setup.sh
assets/: styles.css
data/: datos_preprocesados.parquet  mayorista_preprocesado.parquet  minorista_preprocesado.parquet
src/: __init__.py  animations.py  cache_manager.py  dashboard_agricultor.py  dashboard_profesional.py  data_loader.py  datos_filtrados.py  normalize.py  optimized_outlier_detection.py  price_forecasting.py  search_tool.py  value_distribution.py
src/utils/: logging_config.py
