[project]
name = "agrodash-rd"
version = "0.1.0"
description = "Plataforma de análisis de datos agrícolas para la República Dominicana"
authors = [{name = "Tu Nombre", email = "tu@email.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "prophet>=1.1.6",
    "python-dateutil>=2.9.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.45.0",
    "tarsafe>=0.0.5",
    "xgboost>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"